--- a/src/css/Auth/Registration.module.css
+++ b/src/css/Auth/Registration.module.css
@@ -1,29 +1,27 @@
 .formRegister {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin: 60px auto;
+    max-width: 650px;
+    padding: 40px 20px;
+    background:#E3DBDA;
+    border-radius: 40px;
+    position: relative;
+    text-shadow: none;
+    box-shadow: 0 3px 5px 0 rgba(0,0,0,0.31);
+    margin-bottom: 90px;
 }
 
 .form {
-    width: 500px;
+    width: 600px;
 }
 
-.formA {
-    width: 400px;
-}
+
 
 .formRegister h2 {
-    margin-top: 40px;
-    margin-left: 120px;
+    font-family: 'Palanquin Dark', sans-serif;
+    font-size: 35px;
+    margin-top: 10px;
+    margin-left: 215px;
     margin-bottom: 50px;
-}
-
-.checkbox {
-    bottom: -4px;
-    width: 35px;
-    position: relative;
-    height: 25px;
-    padding: 20px;
 }
 
 .label {
@@ -32,49 +30,55 @@
 
 .input {
     border: none;
-    width: 200px;
-    height: 40px;
-    font-size: 20px;
-    border-bottom: 1px solid black;
+    background-color: rgba(255,255,255,0);
+    border-bottom: solid black;
+    left: 25px;
     position: relative;
-    bottom: 15px;
+    width: 300px;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-size: 24px;
+    font-weight: 350;
 }
 
 .formData {
     display: flex;
     justify-content: space-between;
+    padding: 10px 50px 18px;
+
 }
 
 label {
-    letter-spacing: 2px;
-    font-size: 20px;
-    margin-bottom: 20px;
+    color:#2C3531;
+    top:5px;
+    position: relative;
+    right: 10px;
+    font-family: 'Poiret One', cursive;
+    font-size: 24px;
 }
 
 .btn {
-    margin-bottom: 30px;
-    width: 300px;
-    margin-top: 20px;
-    font-size: 22px;
-    background-color: #FFE552;
-    border-radius: 20px;
-    margin-left: 110px;
+    margin-top: 45px;
+    position:relative;
+    margin-left:195px;
+    width: 40%;
+    height: 45px;
+    font-family: 'Palanquin Dark', sans-serif;
+    font-size: 24px;
+    border-radius:3px;
+    background-color: #C7B9B7;
+    border: none;
 }
-
+.account:hover {
+    text-decoration: underline;
+    color: #422030;
+}
 .account {
-    margin-left: 150px;
+    margin-left: 242px;
+    top: 20px;
+    font-size: 20px;
+    position:relative;
+    font-family: 'Poiret One', cursive;
+    color:#000;
 }
 
-.accountReg {
-    margin-left: 80px;
-}
 
-.button {
-    margin-bottom: 30px;
-    width: 200px;
-    margin-top: 20px;
-    font-size: 22px;
-    background-color: #FFE552;
-    border-radius: 20px;
-    margin-left: 120px;
-}
