--- a/src/css/Home/Home.module.css
+++ b/src/css/Home/Home.module.css
@@ -1,15 +1,17 @@
-.wrapper{
+.wrapper {
     min-height: 320vh;
     height: 100%;
     background-color: #E3DBDA;
 }
-.background{
+
+.background {
     -webkit-background-size: cover;
     background-size: cover;
     width: 100%;
     height: 100vh;
 }
-.h1{
+
+.h1 {
     position: absolute;
     width: 525px;
     left: 1100px;
@@ -18,7 +20,8 @@
     font-size: 120px;
     display: flex;
 }
-.h2{
+
+.h2 {
     position: absolute;
     width: 500px;
     left: 1142px;
@@ -35,28 +38,31 @@
     top: 580px;
     font-size: 22px;
     display: flex;
-    border-radius:10px;
+    border-radius: 10px;
     background-color: #C7B9B7;
     outline: none;
     border: none;
 }
+
 .button a {
     color: #000000;
     text-decoration: none;
     margin-left: 3px;
     font-family: 'Rubik', sans-serif;
 }
-.button a:hover{
+
+.button a:hover {
     text-decoration: underline;
     color: #422030;
 }
 
-.titleStuff h1{
+.titleStuff h1 {
     font-family: 'Poiret One', cursive;
     text-align: center;
     margin: 60px 0 75px;
 
 }
+
 .middle {
     transition: .5s ease;
     opacity: 0;
@@ -82,87 +88,129 @@
     opacity: 1;
 }
 
-.about{
+.about {
     display: flex;
     flex-wrap: wrap;
     margin: 40px auto;
     width: 1600px;
-    height: 450px;
+    height: 820px;
     padding: 40px 20px;
-    background:#F2F0F5;
+    background: #F2F0F5;
     border-radius: 15px;
     position: relative;
     text-shadow: none;
-    box-shadow: 0 3px 5px 0 rgba(0,0,0,0.31);
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.31);
 }
 
-.aboutItem{
+.aboutItem {
     width: 30%;
     margin: 20px auto 20px 220px;
 }
-.aboutFirst{
+
+.aboutFirst {
     display: flex;
     justify-content: space-between;
 }
 
-.typeStuff{
+.typeStuff {
     opacity: 1;
     display: block;
     transition: .5s ease;
     backface-visibility: hidden;
 }
 
-.help{
+.help {
     margin: 40px auto;
     width: 1600px;
     height: 450px;
     padding: 40px 20px;
-    background:#F2F0F5;
+    background: #F2F0F5;
     border-radius: 15px;
     position: relative;
     text-shadow: none;
-    box-shadow: 0 3px 5px 0 rgba(0,0,0,0.31);
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.31);
 
     color: #000000;
 
 }
 
-.help p, ul{
+.help p, ul {
     margin: 20px auto 20px 120px;
     font-family: 'Rubik', sans-serif;
     font-size: 23px;
 }
-.help li{
+
+.help li {
     line-height: 50px;
 }
 
-.socialNet{
+.socialNet {
     display: flex;
 }
 
-.mainSocialNet{
+.mainSocialNet {
     font-size: 25px;
     position: relative;
     left: 420px;
 }
 
-.listNet{
+.listNet {
     display: flex;
     margin: 10px auto auto 220px;
 }
-.email{
+
+.email {
     margin: 40px auto auto 500px;
     font-family: 'Poiret One', cursive;
     font-size: 30px;
 }
-.socialNetworks{
-    color:#000;
+
+.socialNetworks {
+    color: #000;
     margin: 50px;
     font-size: 25px;
     font-family: 'Poiret One', cursive;
 }
-.advertisingTitle{
+
+.advertisingTitle {
     font-size: 25px;
     position: relative;
     left: 1105px;
+}
+
+.aboutFirst {
+    display: flex;
+    width: 100%;
+    position: relative;
+    margin-bottom: 76px;
+    justify-content: space-between;
+    right: 60px;
+}
+
+
+.aboutImg {
+    display: flex;
+    justify-content: space-around;
+}
+
+.aboutImg .number img {
+    height: 150px;
+    margin-left: -74px;
+}
+
+.text{
+    margin-top: 50px;
+}
+
+.aboutImg .number img {
+    height: 150px;
+    margin-left: -74px;
+}
+
+.aboutImg .picture img {
+    height: 100px;
+    object-fit: cover;
+    width: 100%;
+    position: relative;
+    top: 23px;
 }
