--- a/src/css/Admin/ViewShop.module.css
+++ b/src/css/Admin/ViewShop.module.css
@@ -1,7 +1,7 @@
 .infobox{
     margin: 50px auto;
     width: 680px;
-    height: 630px;
+    height: auto;
     padding: 40px 20px;
     background:#E3DBDA;
     border-radius: 15px;
@@ -22,7 +22,6 @@ h2{
     left: 40px;
 
 }
-
 .dataInfo{
     font-family: 'Rubik', sans-serif;
     font-size: 25px;
@@ -31,19 +30,13 @@ h2{
     left: 280px;
     display: flex;
 
-
-
 }
-
 .btn{
     margin-top: 40px;
     font-size: 26px;
     background-color: #C7B9B7;
     outline: none;
-    border-radius: 10px
-;
-
-
+    border-radius: 10px;
 }
 .btn a{
     text-decoration:none;
