--- a/src/css/Admin/Announcement.module.css
+++ b/src/css/Admin/Announcement.module.css
@@ -17,8 +17,11 @@
     font-family: 'Rubik', sans-serif;
 }
 .image{
-    width: 100px;
-    height: 100px;
+    width: 320px;
+    height: 200px;
+    left: 295px;
+    top: 170px;
+    position: absolute;
 }
 .btn{
     position: center;
@@ -38,4 +41,41 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+}
+
+.wrapper button{
+    outline: none;
+    border: none;
+    background: transparent;
+}
+
+.wrapper .imgBnt{
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+}
+.btnEdit {
+    position: absolute;
+    left: 485px;
+}
+.btnDelete{
+    position: absolute;
+    left: 560px;
+}
+.dataTitle{
+    font-family: 'Poiret One', cursive;
+    font-size: 23px;
+}
+.dataInfo{
+    font-size: 23px;
+    width:600px;
+    word-break:break-all;
+}
+.btn{
+    margin-bottom: 50px;
+}
+
+.typeB input{
+    position: absolute;
+
 }
