--- a/src/css/Admin/EditShope.module.css
+++ b/src/css/Admin/EditShope.module.css
@@ -14,10 +14,11 @@ input{
     border: none;
     background-color: rgba(255,255,255,0);
     border-bottom: solid black;
-    left: 105px;
+    left: 60px;
+    margin-top: 10px;
     display: flex;
     position: relative;
-    width: 400px;
+    width: 495px;
     height: 72px;
     font-weight: 300;
 }
@@ -25,10 +26,6 @@ input{
     margin-bottom: 30px;
     text-align: center;
     font-family: 'Rubik', sans-serif;
-}
-.input{
-    font-size: 23px;
-    font-family: 'Montserrat Alternates', sans-serif;
 }
 
 .btn{
@@ -44,9 +41,19 @@ input{
 .wrapper textarea{
     position: relative;
     top: 20px;
-    left: 105px;
-    height: 150px;
-    width: 400px;
+    left: 60px;
+    height: 185px;
+    width: 500px;
     font-family: 'Poiret One', cursive;
     font-size: 25px;
+}
+.password{
+    margin-top:25px;
+    font-size: 24px;
+    font-family: 'Poiret One', cursive;
+}
+
+.input{
+    font-size: 24px;
+    font-family: 'Poiret One', cursive;
 }
