--- a/src/css/Admin/ProfileAdmin.module.css
+++ b/src/css/Admin/ProfileAdmin.module.css
@@ -1,7 +1,7 @@
 .infobox{
     margin: 50px auto;
     width: 680px;
-    height: 750px;
+    height: 800px;
     padding: 40px 20px;
     background:#E3DBDA;
     border-radius: 15px;
@@ -17,7 +17,7 @@ h2{
     font-family: 'Poiret One', cursive;
     font-size: 25px;
     display: flex;
-    margin-bottom: -10px;
+    margin-bottom: -20px;
     position: relative;
     top: 50px;
     left: 75px;
@@ -36,7 +36,7 @@ h2{
 }
 
 .btn{
-    margin-top: 60px;
+    margin-top: 45px;
     font-size: 26px;
     background-color: #C7B9B7;
     outline: none;
@@ -56,6 +56,8 @@ h2{
 .image {
     width: 50%;
     height: auto;
+    position: relative;
+    top: 20px;
 
 }
 
