--- a/src/css/User/Profile.module.css
+++ b/src/css/User/Profile.module.css
@@ -1,12 +1,13 @@
 .infobox{
     margin: 50px auto;
-    width: 600px;
-    height: 710px;
+    width: 680px;
+    height: 850px;
     padding: 40px 20px;
     background:#E3DBDA;
     border-radius: 15px;
     position: relative;
     text-shadow: none;
+
 }
 h2{
     margin-bottom: 30px;
@@ -15,21 +16,32 @@ h2{
 .dataTitle{
     font-family: 'Poiret One', cursive;
     font-size: 25px;
-    margin-top: 40px;
-    margin-bottom: 18px;
+    display: flex;
+    margin-bottom: -20px;
+    position: relative;
+    top: 50px;
+    left: 75px;
+
 }
 
 .dataInfo{
     font-family: 'Rubik', sans-serif;
     font-size: 25px;
+    text-align: left;
+    position: relative;
+    top:24px;
+    left: 350px;
+    display: flex;
+
 }
 
 .btn{
-    margin-top: 20px;
+    margin-top: 67px;
     font-size: 26px;
     background-color: #C7B9B7;
     outline: none;
-    border-radius: 10px;
+    border-radius: 10px
+;
 
 
 }
@@ -41,4 +53,12 @@ h2{
     text-decoration: underline;
     color: #422030;
 }
+.image {
+    width: 50%;
+    height: auto;
+    position: relative;
+    top: 20px;
+
+}
+
 
